tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float32_tensor_with_int32_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 tensor with int32 zeroPoint",
    "onnx",
    "PASS",
)
