tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float32_tensor_with_uint4_zeroPoint_which_has_odd_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 tensor with uint4 zeroPoint which has odd size",
    "onnx",
    "PASS",
)
