tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_then_dequantizeLinear_with_different_float32_scale_and_int8_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "quantizeLinear then dequantizeLinear with different float32 scale and int8 zeroPoint",
    "onnx",
    "PASS",
)
